fix: station name and id on wrong position in landscape station card

--- a/assets/style.css
+++ b/assets/style.css
@@ -2536,10 +2536,15 @@ input:-webkit-autofill:active{
 		left: 2vw;
 		bottom: 2vw;
 	}
+	.station-card #stationID {
+		width: calc(100% - 17.5vh);
+		left: 5vh;
+		top: 4vh;
+	}
 	.station-card #stationName {
-		width: calc(100% - 25vh);
-		left: 12.5vh;
-		top: 5vh;
+		width: calc(100% - 17.5vh);
+		left: 5vh;
+		top: calc(4vh + 1rem + 0.2rem);
 	}
 	.station-card #docksImage {
 		left: 5vh;
